syntax = "proto3";

package jelectrum.proto;

option java_package="jelectrum.proto";

message ProtoBlockSummary
{
  int32 height = 1;
  string block_hash = 2;
  map<string,ProtoTxSummary> tx = 3;
}

message ProtoTxSummary
{
  string tx_hash = 1;
  repeated string involved_address = 2;
  map<int32,ProtoTxInSummary> in = 3;
  map<int32,ProtoTxOutSummary> out = 4;
}

message ProtoTxInSummary
{
  int32 index = 1;
  bool is_coinbase = 2;
  string tx_out_hash = 3;
  int32 tx_out_index = 4;
  string from_address = 5;
}

message ProtoTxOutSummary
{
  int32 index = 1;
  string to_address = 2;
  int64 value = 3;
}

